
Les améliorations décrites sur cette page sont spécifiques aux fonctions BlueXP qui permettent la gestion de Cloud Volumes ONTAP. Pour découvrir les nouveautés du logiciel Cloud Volumes ONTAP lui-même, https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/index.html["Accédez aux notes de version de Cloud Volumes ONTAP"^]



== 5 décembre 2023

Les modifications suivantes ont été introduites.



=== Prise en charge de nouvelles régions dans Azure



==== Prise en charge des régions à zone de disponibilité unique

Les régions suivantes prennent désormais en charge les déploiements de zones de disponibilité uniques hautement disponibles dans Azure pour Cloud Volumes ONTAP 9.12.1 GA et versions ultérieures :

* Tel Aviv
* Milan




==== Prise en charge de plusieurs zones de disponibilité par région

Les régions suivantes prennent désormais en charge les déploiements de zones de disponibilité multiples hautement disponibles dans Azure pour Cloud Volumes ONTAP 9.12.1 GA et versions ultérieures :

* Inde centrale
* Norvège est
* Suisse Nord
* Afrique du Sud Nord
* Émirats arabes Unis Nord
* Chine Nord 3


Pour obtenir la liste de toutes les régions, reportez-vous au https://bluexp.netapp.com/cloud-volumes-global-regions["Carte des régions globales sous Azure"^].



== 10 novembre 2023

Le changement suivant a été introduit avec la version 3.9.35 du connecteur.



=== Région de Berlin désormais prise en charge dans Google Cloud

La région de Berlin est désormais prise en charge dans Google Cloud pour Cloud Volumes ONTAP 9.12.1 GA et versions ultérieures.

Pour obtenir la liste de toutes les régions, reportez-vous au https://bluexp.netapp.com/cloud-volumes-global-regions["Carte des régions du monde sous Google Cloud"^].



== 8 novembre 2023

Le changement suivant a été introduit avec la version 3.9.35 du connecteur.



=== La région de tel Aviv est désormais prise en charge dans AWS
