@@ -5184,4 +5184,9 @@ Reportez-vous à la<block ref="9394861c48a8d6b1dd64975c2c0558db" category="inlin
   <block id="92e19d728517dc371c0f37ee23fa9d03" category="list-text">Émirats arabes Unis Nord</block>
   <block id="343c78956fe2e30b58a341de94a8673a" category="list-text">Chine Nord 3</block>
   <block id="ee39417afe0e7b7726a65f6235448846" category="paragraph">Pour obtenir la liste de toutes les régions, reportez-vous au<block ref="0f1c2d6a84741595f86a459e46c2a400" category="inline-link-rx"></block>.</block>
+  <block id="cfa3976fbec6c6f7dfd434e6d66eb83a" category="list-text">9.14.1 RC1</block>
+  <block id="a037be7aafc2f071c4517e8f2c6e58e9" category="section-title">6 décembre 2023</block>
+  <block id="4a76045b19fb3233070f77ae414d5810" category="section-title">Cloud Volumes ONTAP 9.14.1 RC1</block>
+  <block id="efb4d9478ba663f514e18b3310c2de65" category="paragraph">BlueXP peut désormais déployer et gérer Cloud Volumes ONTAP 9.14.1 dans AWS, Azure et Google Cloud.</block>
+  <block id="d544ab02530940d46c43ea00a73d59d3" category="cell">9.14.1</block>
 </blocks>
