@@ -49,7 +49,13 @@ La version de Cloud Volumes ONTAP sur laquelle vous pouvez effectuer la mise à 
 | Version actuelle | Versions pouvant être directement mises à niveau vers 
 
 
-| 9.13.1 | 9.14.0 
+| 9.14.0 | 9.14.1 
+
+
+.2+| 9.13.1 | 9.14.1 
+
+
+| 9.14.0 
 
 
 | 9.13.0 | 9.13.1 
